--- a/Templates/Akreditasi/SubFolder1List.html
+++ b/Templates/Akreditasi/SubFolder1List.html
@@ -5,8 +5,15 @@
 <section>
   <nav aria-label="breadcrumb">
       <ol class="breadcrumb">
-        <li class="breadcrumb-item"><a href="{% url 'folder-list' kategori=kategori pk_prodi=link1 %}">{{kategori}} {{judul.nama_prodi}}</a></li>
+        {% if kategori == 'Informasi Umum' %}
+        <li class="breadcrumb-item"><a href="{% url 'folder-list' kategori=kategori pk_prodi=link1 %}">{{kategori}}</a></li>
         <li class="breadcrumb-item active" aria-current="page" href="">{{judul.nama_folder}}</li>
+        {% elif bagian == None %}
+        <li class="breadcrumb-item"><a href="">{{judul.nama_folder}}</a></li>
+        {% else %}
+        <li class="breadcrumb-item"><a href="{% url 'folder-list' kategori=kategori pk_prodi=link1 %}">{{kategori}} {{bagian}}</a></li>
+        <li class="breadcrumb-item active" aria-current="page" href="">{{judul.nama_folder}}</li>
+        {% endif %}
       </ol>
   </nav>
 </section>
@@ -22,6 +29,14 @@
             <path fill-rule="evenodd" d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z"/>
         </svg>
         Add new file
+      </a>
+
+      <a class="btn btn-primary" href="{% url 'subfolder1-create' pk_parent %}">
+        <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-plus-circle" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+            <path fill-rule="evenodd" d="M8 15A7 7 0 1 0 8 1a7 7 0 0 0 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
+            <path fill-rule="evenodd" d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z"/>
+        </svg>
+        Add new folder
       </a>
 
       {%elif kategori == 'ABPT' %}
@@ -88,6 +103,23 @@
         </div>
       </div>
       {% endfor %}
+    </div>
+  </div>
+  </section>
+
+      <section class="page-title" style="margin-left: 17.9rem; margin-right: 4rem;">
+        <div class="list-group">
+          {% for itemfolder in folder %}
+            <div type="button" class="list-group-item list-group-item-action button list-main" data-role="list-menus" onclick="window.location='{% url 'subfolder2-list' itemfolder.id %}';">
+              <a href="" class="text-decoration-none text-reset">{{itemfolder.nama_folder}}</a>
+              <div>
+                  <a href="{% url 'subfolder1-update' pk_parent=itemfolder.id %}" class="btn btn-warning btn-card-menu">Edit</a>
+                  <a href="{% url 'subfolder1-delete' pk_parent=itemfolder.id %}" class="btn btn-danger btn-card-menu">Delete</a>
+              </div>
+            </div>
+          {%endfor%}
+        </div>
+      </section>
 
       {%elif kategori == 'ABPT' %}
       {% for item in files %}
@@ -109,9 +141,9 @@
         </div>
       </div>
       {% endfor %}
-    </div>
-  </div>
-  </section>
+        </div>
+      </div>
+      </section>
 
       <section class="page-title" style="margin-left: 17.9rem; margin-right: 4rem;">
         <div class="list-group">
