--- a/Templates/Akreditasi/FolderList.html
+++ b/Templates/Akreditasi/FolderList.html
@@ -27,24 +27,62 @@
             <path fill-rule="evenodd" d="M8 15A7 7 0 1 0 8 1a7 7 0 0 0 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
             <path fill-rule="evenodd" d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z"/>
         </svg>    
-        Add new
+        Add new folder
       </a>
       {% endif %}
   </section>
 
   <section class="page-title" style="margin-left: 17.9rem; margin-right: 4rem;">
     <div class="list-group">
-      {%for item in informasiUmum%}
+      {%for item in pages%}
         <div type="button" class="list-group-item list-group-item-action button list-main" data-role="list-menus" onclick="window.location='{% url 'subfolder1-list' pk_parent=item.id %}';">
-          <a href="" class="text-decoration-none text-reset">{{item.nama_folder}}</a>
+          <svg xmlns="http://www.w3.org/2000/svg" width="22" height="auto" fill="currentColor" class="bi bi-folder-fill" viewBox="0 0 16 16">
+            <path fill-rule="evenodd" d="M9.828 3h3.982a2 2 0 0 1 1.992 2.181l-.637 7A2 2 0 0 1 13.174 14H2.826a2 2 0 0 1-1.991-1.819l-.637-7a1.99 1.99 0 0 1 .342-1.31L.5 3a2 2 0 0 1 2-2h3.672a2 2 0 0 1 1.414.586l.828.828A2 2 0 0 0 9.828 3zm-8.322.12C1.72 3.042 1.95 3 2.19 3h5.396l-.707-.707A1 1 0 0 0 6.172 2H2.5a1 1 0 0 0-1 .981l.006.139z"/>
+          </svg>
+          <a class="text-decoration-none text-reset text-control">{{item.nama_folder}}</a>
           {% if roles == 'Admin' %}
-          <div>
+          <div class=end-box>
+            <a class="text-decoration-none text-reset text-control">{{item.updated_at}}</a>
             <a href="{% url 'folder-update' kategori=kategori pk_prodi=item.id %}" class="btn btn-warning btn-card-menu">Edit</a>
             <a href="{% url 'folder-delete' kategori=kategori pk_prodi=item.id %}" class="btn btn-danger btn-card-menu">Delete</a>
+          </div>
+          {% else %}
+          <div class=end-box>
+            <a class="text-decoration-none text-reset text-control">{{item.updated_at}}</a>
           </div>
           {% endif %}
         </div>
       {%endfor%}
+
+      <nav aria-label="Page navigation example" style='margin-top:20px;'>
+        <ul class="pagination">
+          <li class="page-item">
+            {% if pages.has_previous %}
+            <a class="page-link" href="?page={{ pages.previous_page_number }}" aria-label="Previous">
+              <span aria-hidden="true">&laquo;</span>
+            </a>
+            {% else %}
+            <a class="page-link" href="?page={{ pages.number }}" aria-label="Previous">
+              <span aria-hidden="true">&laquo;</span>
+            </a>
+            {% endif %}
+          </li>
+          {% for x in jumlah_halaman %}
+          <li class="page-item {% if pages.number == x %}active{% endif %}" id="pages"><a class="page-link" href="?page={{x}}">{{x}}</a></li>
+          {% endfor %}
+          <li class="page-item">
+            {% if pages.has_next %}
+            <a class="page-link" href="?page={{ pages.next_page_number }}" aria-label="Next">
+              <span aria-hidden="true">&raquo;</span>
+            </a>
+            {% else %}
+            <a class="page-link" href="?page={{ pages.number }}" aria-label="Next">
+              <span aria-hidden="true">&raquo;</span>
+            </a>
+            {% endif %}
+          </li>
+        </ul>
+      </nav>
     </div>
   </section>
   
@@ -56,4 +94,3 @@
     <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
   </body>
 </html>
-
