--- a/Templates/main.html
+++ b/Templates/main.html
@@ -15,7 +15,8 @@
     <section class="left_navigation" id="leftSidebar">
         <!--Logo prasmul-->
         <img src="https://lms.prasetiyamulya.ac.id/pluginfile.php/1/core_admin/logo/0x200/1601623298/logo_upm_putih.png" class="prasmul_logo pt-3">
-
+        <h5 class="upmstem"><strong> Unit Pemjaminan Mutu </strong>  </h5>
+        <h5 class="upmstem"><strong> Sekolah STEM Terapan </strong> </h5>
         <!--Navigation Menu-->
 
         <div class="accordion navigation_menu pt-3" id="accordionExample">
