--- a/static/css/main.css
+++ b/static/css/main.css
@@ -4,6 +4,12 @@
   margin-right: auto;
   width: 90%;
 }
+.upmstem{
+  color: #FFFFFF;
+  font-size: 16px;
+  text-align: center;
+  margin-left: 10px;
+}
 
 .card1{
   font-family: 'Montserrat', sans-serif;
