--- a/Templates/InformasiUmum/SubFolderInformasiUmum1.html
+++ b/Templates/InformasiUmum/SubFolderInformasiUmum1.html
@@ -1,5 +1,10 @@
 {% extends 'main.html' %}
 {% load static %}
+{% block search %}
+  <div class="search1 ml-4">
+    <input class="input-sm border-0 p-2 col-md-11 input_search1" id="searchbox" type="text" placeholder="Search anything...">
+  </div>
+{% endblock %}
 {% block content %}
 
 <section>
