--- a/Templates/main.html
+++ b/Templates/main.html
@@ -21,6 +21,20 @@
 
         <div class="accordion navigation_menu pt-3" id="accordionExample">
           <div class="card card1">
+            <div class="card-header card1-2" id="headingFour">
+              <h2 class="mb-0"></h2>
+              <a class="btn btn-link btn-block text-left button1" type="button" href="{% url 'home' %}">
+                  <svg width="1.25em" height="1.25em" viewBox="0 0 16 16" class="bi bi-house-door-fill house_icon" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M6.5 10.995V14.5a.5.5 0 0 1-.5.5H2a.5.5 0 0 1-.5-.5v-7a.5.5 0 0 1 .146-.354l6-6a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 .146.354v7a.5.5 0 0 1-.5.5h-4a.5.5 0 0 1-.5-.5V11c0-.25-.25-.5-.5-.5H7c-.25 0-.5.25-.5.495z"/>
+                    <path fill-rule="evenodd" d="M13 2.5V6l-2-2V2.5a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5z"/>
+                  </svg>
+                  Home
+                </a>
+              </h2>
+            </div>
+          </div>
+
+          <div class="card card1">
             <div class="card-head card1-2" id="headingOne">
               <h2 class="mb-0"></h2>
                 <a class="btn btn-link btn-block text-left button1 {% if kategori == 'Informasi Umum' %}main-active{% endif %}" type="button" href="{% url 'folder-list' kategori='Informasi Umum' pk_prodi=1 %}">  
@@ -202,6 +216,7 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.11"></script>
     <script src="{% static 'java/script.js'%}"></script>
 
     {% block content %}
