--- a/Templates/Account/change_password.html
+++ b/Templates/Account/change_password.html
@@ -8,20 +8,11 @@
 
 <section class="form-area">
     <div class="box-inside">
-        <form method="POST" class="mt-4" enctype="multipart/form-data">
+        <form method="post">
             {% csrf_token %}
-            {% if messages %}
-            <ul class="messages">
-                {% for message in messages %}
-                <div class="alert alert-success" role="alert">
-                    {{ message }}
-                  </div>
-                {% endfor %}
-            </ul>
-            {% endif %}
-            {{form.as_p}}
-            <button type="submit" class="btn btn-primary">Save</button>
-        </form>
+                {{form.as_p}}
+            <button type="submit">Save changes</button>
+          </form>
     </div> 
 </section>
 
