--- a/Templates/Akreditasi/FolderList.html
+++ b/Templates/Akreditasi/FolderList.html
@@ -21,7 +21,7 @@
     <h3 class="font-weight-bold">{{label}} {{prodi}}</h3>
     {% endif %}
       <p class="font-weight-light">Universitas Prasetiya Mulya</p>
-      {% if roles == 'Admin' %}
+      {% if roles == 'Admin' or roles == 'Admin Prodi'%}
       <a class="btn btn-primary" href="{% url 'folder-create' kategori=kategori pk_prodi=pk_prodi %}">
         <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-plus-circle" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
             <path fill-rule="evenodd" d="M8 15A7 7 0 1 0 8 1a7 7 0 0 0 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
@@ -40,7 +40,7 @@
             <path fill-rule="evenodd" d="M9.828 3h3.982a2 2 0 0 1 1.992 2.181l-.637 7A2 2 0 0 1 13.174 14H2.826a2 2 0 0 1-1.991-1.819l-.637-7a1.99 1.99 0 0 1 .342-1.31L.5 3a2 2 0 0 1 2-2h3.672a2 2 0 0 1 1.414.586l.828.828A2 2 0 0 0 9.828 3zm-8.322.12C1.72 3.042 1.95 3 2.19 3h5.396l-.707-.707A1 1 0 0 0 6.172 2H2.5a1 1 0 0 0-1 .981l.006.139z"/>
           </svg>
           <a class="text-decoration-none text-reset text-control">{{item.nama_folder}}</a>
-          {% if roles == 'Admin' %}
+          {% if roles == 'Admin' or roles == 'Admin Prodi' %}
           <div class=end-box>
             <a class="text-decoration-none text-reset text-control">{{item.updated_at}}</a>
             <a href="{% url 'folder-update' kategori=kategori pk_prodi=item.id %}" class="btn btn-warning btn-card-menu">Edit</a>
