--- a/Templates/Akreditasi/FolderAdd.html
+++ b/Templates/Akreditasi/FolderAdd.html
@@ -5,7 +5,7 @@
         
         <!--Ini yang dipake-->
         <section class="page-title">
-          <h5 class="font-weight-bold">Add New Folder in {{prodi_name}}</h5>
+          <h5 class="font-weight-bold">{{crud}} in {{prodi_name}}</h5>
         </section>
 
         
