--- a/Templates/Akreditasi/SubFile2List.html
+++ b/Templates/Akreditasi/SubFile2List.html
@@ -41,35 +41,64 @@
       {% endif %}
   </section>
 
-
-      
-  <section class="folder-card">
-    <div class="box-inside">
-    <div class="row">
-      {% for item in files %}
-      <div class="col-sm-6" data-role="card-menus">
-        <div class="card card3">
-          <div class="card-body">
-            <div class="card-inside">
-                <div class="card-text-inside">
-                    <h5 class="card-title">{{item.nama_file}}</h5>
-                    <p class="card-text">Ini subtitle</p>
-                </div>
-                <div>
-                    <a href="{% static item.file_attachment.url %}" class="btn btn-success mr-3 btn-card-menu">Open</a>
-                    {% if roles == 'Admin' %}
-                      <a href="{% url 'subfile2-update' pk_parent=item.id %}" class="btn btn-warning mr-3 btn-card-menu">Edit</a>
-                      <a href="{% url 'subfile2-delete' pk_parent=item.id %}" class="btn btn-danger mr-3 btn-card-menu">Delete</a>
-                    {% endif %}
-                </div>
-            </div>
+  {% if totalfile >= 1 %}
+  <section class="page-title" style="margin-left: 17.9rem; margin-right: 4rem;">
+    <h1 class="folder-file">File</h1>
+    <div class="list-group">
+      {% for itemfolder in filepages %}
+        <div type="button" class="list-group-item list-group-item-action button list-main" data-role="list-menus" onclick="window.location='{% static itemfolder.file_attachment.url %}';">
+          <svg xmlns="http://www.w3.org/2000/svg" width="22" height="auto" fill="currentColor" class="bi bi-file-earmark-text" viewBox="0 0 16 16">
+            <path d="M4 0h5.5v1H4a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1h8a1 1 0 0 0 1-1V4.5h1V14a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V2a2 2 0 0 1 2-2z"/>
+            <path d="M9.5 3V0L14 4.5h-3A1.5 1.5 0 0 1 9.5 3z"/>
+            <path fill-rule="evenodd" d="M5 11.5a.5.5 0 0 1 .5-.5h2a.5.5 0 0 1 0 1h-2a.5.5 0 0 1-.5-.5zm0-2a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5zm0-2a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5z"/>
+          </svg>
+          <a class="text-decoration-none text-reset text-control">{{itemfolder.nama_file}}</a>
+          {% if roles == 'Admin' %}
+          <div class=end-box>
+            <a class="text-decoration-none text-reset text-control">{{itemfolder.updated_at}}</a>
+            <a href="{% url 'subfile2-update' pk_parent=itemfolder.id %}" class="btn btn-warning btn-card-menu">Edit</a>
+            <a href="{% url 'subfile2-delete' pk_parent=itemfolder.id %}" class="btn btn-danger btn-card-menu">Delete</a>
           </div>
+          {% else %}
+          <div class=end-box>
+            <a class="text-decoration-none text-reset text-control">{{itemfolder.updated_at}}</a>
+          </div>
+          {% endif %}
         </div>
+        {% endfor %}
       </div>
-      {% endfor %}
-    </div>
-    </div>
-  </section>
+  
+      <nav aria-label="Page navigation example" style='margin-top: 18px;'>
+        <ul class="pagination">
+          <li class="page-item">
+            {% if filepages.has_previous %}
+            <a class="page-link" href="?pagefile={{ filepages.previous_page_number }}" aria-label="Previous">
+              <span aria-hidden="true">&laquo;</span>
+            </a>
+            {% else %}
+            <a class="page-link" href="?pagefile={{ filepages.number }}" aria-label="Previous">
+              <span aria-hidden="true">&laquo;</span>
+            </a>
+            {% endif %}
+          </li>
+          {% for x in jumlah_halamanfile %}
+          <li class="page-item {% if filepages.number == x %}active{% endif %}" id="pages"><a class="page-link" href="?pagefile={{x}}">{{x}}</a></li>
+          {% endfor %}
+          <li class="page-item">
+            {% if filepages.has_next %}
+            <a class="page-link" href="?pagefile={{ filepages.next_page_number }}" aria-label="Next">
+              <span aria-hidden="true">&raquo;</span>
+            </a>
+            {% else %}
+            <a class="page-link" href="?pagefile={{ filepages.number }}" aria-label="Next">
+              <span aria-hidden="true">&raquo;</span>
+            </a>
+            {% endif %}
+          </li>
+        </ul>
+      </nav> 
+    </section>
+  {% endif %}
 
 {% endblock %}
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
