--- a/Templates/Home.html
+++ b/Templates/Home.html
@@ -6,14 +6,10 @@
   <div class="img-container">
     <img class="main-img" src="https://stem.prasetiyamulya.ac.id/wp-content/uploads/2020/01/Baru3V.png" /> <!--klo mau ganti gambar, ganti aja-->
     <div id="typed-strings">
-      <p class="text-deco top-typed-text">Unit Penjaminan Mutu</p>
+      <p class="text-deco top-typed-text" >Selamat datang di <br>Unit Penjaminan Mutu<br>Universitas Prasetiya Mulya</p>
     </div>
-    <span id="typed" class="text-deco top-typed-text"></span>
+    <span id="typed" style="text-align: center;" class="text-deco top-typed-text"></span>
     <br>
-    <div id="typed-strings-2">
-        <p class="text-deco btm-typed-text">Universitas Prasetiya Mulya</p>
-    </div>
-    <span id="typed-2" class="text-deco btm-typed-text"></span>   
   </div>
 
     {% endblock %}
