--- a/Templates/Akreditasi/SubFolder1List.html
+++ b/Templates/Akreditasi/SubFolder1List.html
@@ -1,5 +1,12 @@
 {% extends 'main.html' %}
 {% load static %}
+
+{% block search %}
+      <div class="search1">
+        <input class="input-sm border-0 p-2 col-md-11 input_search1" id="searchbox" type="text" placeholder="Search anything...">
+      </div>
+{% endblock %}
+
 {% block content %}
 
 <section>
@@ -22,6 +29,9 @@
       <h3 class="font-weight-bold">{{judul.nama_folder}}</h3>
       <p class="font-weight-light">Universitas Prasetiya Mulya</p>
 
+      {% if roles == 'Admin' or roles == 'Admin Prodi' %}
+
+      {% if roles == 'Admin Prodi' and judul.nama_prodi != None %}
       {%if kategori == 'AMI' %}
       <a class="btn btn-primary" href="{% url 'file-create' pk_parent %}">
         <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-plus-circle" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
@@ -55,7 +65,46 @@
         </svg>
         Add new folder
       </a>
+      {% endif %}
+      {% endif %}
+      
+      {% if roles == 'Admin' %}
+      {%if kategori == 'AMI' %}
+      <a class="btn btn-primary" href="{% url 'file-create' pk_parent %}">
+        <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-plus-circle" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+            <path fill-rule="evenodd" d="M8 15A7 7 0 1 0 8 1a7 7 0 0 0 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
+            <path fill-rule="evenodd" d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z"/>
+        </svg>
+        Add new file
+      </a>
 
+      <a class="btn btn-primary" href="{% url 'subfolder1-create' pk_parent %}">
+        <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-plus-circle" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+            <path fill-rule="evenodd" d="M8 15A7 7 0 1 0 8 1a7 7 0 0 0 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
+            <path fill-rule="evenodd" d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z"/>
+        </svg>
+        Add new folder
+      </a>
+
+      {%elif kategori == 'ABPT' %}
+      <a class="btn btn-primary" href="{% url 'file-create' pk_parent %}">
+        <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-plus-circle" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+            <path fill-rule="evenodd" d="M8 15A7 7 0 1 0 8 1a7 7 0 0 0 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
+            <path fill-rule="evenodd" d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z"/>
+        </svg>
+        Add new file
+      </a>
+
+      <a class="btn btn-primary" href="{% url 'subfolder1-create' pk_parent %}">
+        <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-plus-circle" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+            <path fill-rule="evenodd" d="M8 15A7 7 0 1 0 8 1a7 7 0 0 0 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
+            <path fill-rule="evenodd" d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z"/>
+        </svg>
+        Add new folder
+      </a>
+      {% endif %}
+
+      {% if roles == 'Admin' %}
       {% else %}
       {%if judul.isAllowNewFile == True %}
       <a class="btn btn-primary" href="{% url 'file-create' pk_parent %}">
@@ -77,7 +126,10 @@
       </a>
       {% endif %}
       {% endif %}
+      {% endif %}
+      {% endif %}
     </section>
+    
 
 
     {% if kategori == 'AMI' %}
@@ -94,6 +146,12 @@
             </svg>
             <a class="text-decoration-none text-reset text-control">{{itemfolder.nama_file}}</a>
             {% if roles == 'Admin' %}
+            <div class=end-box>
+              <a class="text-decoration-none text-reset text-control">{{itemfolder.updated_at}}</a>
+              <a href="{% url 'file-update' pk_parent=itemfolder.id %}" class="btn btn-warning btn-card-menu">Edit</a>
+              <a href="{% url 'file-delete' pk_parent=itemfolder.id %}" class="btn btn-danger btn-card-menu">Delete</a>
+            </div>
+            {% elif roles == 'Admin Prodi' and judul.nama_prodi != None %}
             <div class=end-box>
               <a class="text-decoration-none text-reset text-control">{{itemfolder.updated_at}}</a>
               <a href="{% url 'file-update' pk_parent=itemfolder.id %}" class="btn btn-warning btn-card-menu">Edit</a>
@@ -152,6 +210,12 @@
             </svg>
             <a class="text-decoration-none text-reset text-control">{{itemfolder.nama_folder}}</a>
             {% if roles == 'Admin' %}
+            <div class=end-box>
+              <a class="text-decoration-none text-reset text-control">{{itemfolder.updated_at}}</a>
+              <a href="{% url 'subfolder1-update' pk_parent=itemfolder.id %}" class="btn btn-warning btn-card-menu">Edit</a>
+              <a href="{% url 'subfolder1-delete' pk_parent=itemfolder.id %}" class="btn btn-danger btn-card-menu">Delete</a>
+            </div>
+            {% elif roles == 'Admin Prodi' and judul.nama_prodi != None %}
             <div class=end-box>
               <a class="text-decoration-none text-reset text-control">{{itemfolder.updated_at}}</a>
               <a href="{% url 'subfolder1-update' pk_parent=itemfolder.id %}" class="btn btn-warning btn-card-menu">Edit</a>
@@ -218,6 +282,12 @@
                   <a href="{% url 'file-update' pk_parent=itemfolder.id %}" class="btn btn-warning btn-card-menu">Edit</a>
                   <a href="{% url 'file-delete' pk_parent=itemfolder.id %}" class="btn btn-danger btn-card-menu">Delete</a>
                 </div>
+                {% elif roles == 'Admin Prodi' and judul.nama_prodi != None %}
+                <div class=end-box>
+                  <a class="text-decoration-none text-reset text-control">{{itemfolder.updated_at}}</a>
+                  <a href="{% url 'file-update' pk_parent=itemfolder.id %}" class="btn btn-warning btn-card-menu">Edit</a>
+                  <a href="{% url 'file-delete' pk_parent=itemfolder.id %}" class="btn btn-danger btn-card-menu">Delete</a>
+                </div>
                 {% else %}
                 <div class=end-box>
                   <a class="text-decoration-none text-reset text-control">{{itemfolder.updated_at}}</a>
@@ -270,6 +340,12 @@
                 </svg>
                 <a class="text-decoration-none text-reset text-control">{{itemfolder.nama_folder}}</a>
                 {% if roles == 'Admin' %}
+                <div class=end-box>
+                  <a class="text-decoration-none text-reset text-control">{{itemfolder.updated_at}}</a>
+                  <a href="{% url 'subfolder1-update' pk_parent=itemfolder.id %}" class="btn btn-warning btn-card-menu">Edit</a>
+                  <a href="{% url 'subfolder1-delete' pk_parent=itemfolder.id %}" class="btn btn-danger btn-card-menu">Delete</a>
+                </div>
+                {% elif roles == 'Admin Prodi' and judul.nama_prodi != None %}
                 <div class=end-box>
                   <a class="text-decoration-none text-reset text-control">{{itemfolder.updated_at}}</a>
                   <a href="{% url 'subfolder1-update' pk_parent=itemfolder.id %}" class="btn btn-warning btn-card-menu">Edit</a>
