--- a/static/css/main.css
+++ b/static/css/main.css
@@ -169,7 +169,7 @@ text-decoration: none;
 
 .input_search1{
   vertical-align: middle;
-  padding-top: 0.8rem !important;
+  padding-top: 0.6rem !important;
   padding-bottom: 0.3rem !important;
   border-bottom: 1px solid #000 !important;
   background-color: #f8f9fa;
@@ -388,4 +388,8 @@ text-decoration: none;
 .folder-file{
   margin-bottom: 1.1rem;
   font-size: 1.2rem;
+}
+
+.btn-navbar{
+  padding-right: 0.2rem;
 }
