--- a/Templates/Akreditasi/SubFolder1List.html
+++ b/Templates/Akreditasi/SubFolder1List.html
@@ -102,21 +102,15 @@
         </svg>
         Add new folder
       </a>
-      {% endif %}
-
-      {% if roles == 'Admin' %}
-      {% else %}
-      {%if judul.isAllowNewFile == True %}
+      {% elif kategori == 'Informasi Umum' %}
       <a class="btn btn-primary" href="{% url 'file-create' pk_parent %}">
-          <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-plus-circle" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-              <path fill-rule="evenodd" d="M8 15A7 7 0 1 0 8 1a7 7 0 0 0 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
-              <path fill-rule="evenodd" d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z"/>
-          </svg>
-          Add new file
+        <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-plus-circle" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+            <path fill-rule="evenodd" d="M8 15A7 7 0 1 0 8 1a7 7 0 0 0 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
+            <path fill-rule="evenodd" d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z"/>
+        </svg>
+        Add new file
       </a>
-      {% endif %}
 
-      {%if judul.isAllowNewFolder == True %}
       <a class="btn btn-primary" href="{% url 'subfolder1-create' pk_parent %}">
         <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-plus-circle" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
             <path fill-rule="evenodd" d="M8 15A7 7 0 1 0 8 1a7 7 0 0 0 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
@@ -124,7 +118,6 @@
         </svg>
         Add new folder
       </a>
-      {% endif %}
       {% endif %}
       {% endif %}
       {% endif %}
